# RainRemoval

./: CMakeLists.txt  ReadMe.md  configs.h  main.cpp
include/: Exceptions.h  SPAlgorithm.h  SPProcess.h  VideoProcess.h  colorspace.h  spalgorithm.h  spprocess.h  stBuffer.h  stbuffer.h  videoprocess.h
lib/: CMakeLists.txt  SPAlgorithm.cpp  SPProcess.cpp  VideoProcess.cpp  colorspace.cpp  spalgorithm.cpp  spprocess.cpp  stBuffer.cpp  stbuffer.cpp  videoprocess.cpp
